lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/network_accept_tcp_nagle_disable/network_accept_tcp_nagle_disable1/network_accept_tcp_nagle_disable1.err
In file included from /home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/network_accept_tcp_nagle_disable/network_accept_tcp_nagle_disable1/network_accept_tcp_nagle_disable1.c:9:
In file included from /home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/src/base.h:5:
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/src/sys-time.h:37:1: error: static declaration of 'timegm' follows non-static declaration
timegm (const struct tm * const tm);
^
/usr/include/time.h:249:15: note: previous declaration is here
extern time_t timegm (struct tm *__tp) __THROW;
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
